@@ -22,6 +22,7 @@ cnb002276974.mrc - Two ISBNs in the same publishing place.
 cnb002341867.mrc - Four ISBNs in two publishing houses with two book covers.
 cnb002467522.mrc - Publisher (264 field). Illustrator (700 field).
 cnb002536669.mrc - Two publishers, two places (264 field). Two ISBNs (020 field). Book series.
+cnb002662450.xml - Three ISBNs (020 field). Two publishing houses and box.
 cnb002896853.mrc - Different ČČNB (015 field, z subfield)
 cnb002964680.mrc - Two ISBNs. Book series.
 cnb002981333.mrc - Has OCoLC (035 field).
